--- a/0x0B-spotify_clone/spotify_clone/index.html
+++ b/0x0B-spotify_clone/spotify_clone/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-gray-50">
+<html lang="en-GB" class="h-full bg-gray-50">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.ico" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.ico" /> -->
+    <link rel="icon" type="image/png" href="/src/assets/favicon.png" width="300" height="300"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stopify</title>
   </head>
