--- a/0x0B-spotify_clone/spotify_clone/index.html
+++ b/0x0B-spotify_clone/spotify_clone/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.ico" /> -->
-    <link rel="icon" type="image/png" href="/src/assets/favicon.png" width="300" height="300"/>
+    <link rel="icon" type="image/png" href="/src/assets/favicon.png" width=1000 height=1000/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stopify</title>
   </head>
